--- a/landing-page/main.html
+++ b/landing-page/main.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <link rel="stylesheet" href="style.css">
+<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <body>
     <section id = "section1">
         <div class = "backimage">
