--- a/landing-page/main.html
+++ b/landing-page/main.html
@@ -7,14 +7,17 @@
     <title>Document</title>
 </head>
 <link rel="stylesheet" href="style.css">
-<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <body>
     <section id = "section1">
         <div class = "backimage">
-            <span class="title">Beautimage.js</span>
+            <span class="title"><a>Beautimage.js</a></span>
             <span class= "description">Image filter library</span>
             <div class = "smallBack">
-                <div class = "card1"></div>
+                <div class = "card1">
+                    <div class = "openImage"></div>
+                    <div class = "openDescription"></div>
+                </div>
                 <div class = "card2"></div>
                 <div class = "card3"></div>
             </div>
