add smooth scroll

--- a/landing-page/main.html
+++ b/landing-page/main.html
@@ -11,11 +11,11 @@
 <body>
     <section id = "section1">
         <div class = "backimage">
-            <span class="title"><a>Beautimage.js</a></span>
+            <span class="title"><a href = "#smallBack" id = "clickTitle">Beautimage.js</a></span>
             <span class= "description">Image filter library</span>
-            <div class = "smallBack">
+            <div id = "smallBack">
                 <div class = "card1">
-                    <div class = "openImage"></div>
+                    <div class = "openImage"><img src="./img/Opensource.png" alt=""></div>
                     <div class = "openDescription"></div>
                 </div>
                 <div class = "card2"></div>
