--- a/landing-page/main.html
+++ b/landing-page/main.html
@@ -15,7 +15,7 @@
             <span class= "description">Image filter library</span>
             <div id = "smallBack">
                 <div class = "card1">
-                    <div class = "openImage"><img src="./img/Opensource.png" alt="" class = "image1"></div>
+                    <div class = "openImage"><img src="./img/OpenSource.png" alt="" class = "image1"></div>
                     <div class = "openDescription"></div>
                 </div>
                 <div class = "card2">
@@ -23,7 +23,7 @@
                 </div>
                 <div class = "card3">
                     <div class = "openImage">
-                        <img src="./img/addFilter.png"/>
+                       
                     </div>
                 </div>
             </div>
