--- a/landing-page/main.html
+++ b/landing-page/main.html
@@ -14,17 +14,17 @@
             <span class="title"><a href = "#smallBack" id = "clickTitle">Beautimage.js</a></span>
             <span class= "description">Image filter library</span>
             <div id = "smallBack">
-                <div class = "card1">
-                    <div class = "openImage"><img src="./img/OpenSource.png" alt="" class = "image1"></div>
+                <div class = "card">
+                    <div class = "openImage"><img src="./img/OpenSource.png" alt="" class = "image"></div>
                     <div class = "openDescription"></div>
                 </div>
-                <div class = "card2">
-                    <div class= "openImage"><img src="./img/variousFilter.png" class = "image2"/></div>
+                <div class = "card">
+                    <div class= "openImage"><img src="./img/variousFilter.png" class = "image"/></div>
+                    <div class = "openDescription"></div>
                 </div>
-                <div class = "card3">
-                    <div class = "openImage">
-                       
-                    </div>
+                <div class = "card">
+                    <div class = "openImage"><img src = "./img/addFilter.png" class = "image"/></div>
+                    <div class = "openDescription"></div>
                 </div>
             </div>
             
